Fix: Contactform is not responsive
Well, now it is :)

--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,7 @@ body {
     top: 0em;
   }
 }
+
 .arrow-title {
   margin-top: 50px;
   font-size: 70px;
@@ -816,6 +817,7 @@ body {
   width: 470px;
   height: 270px;
 }
+
 @media screen and (max-width: 700px) {
   .project-container {
     position: relative;
@@ -1099,8 +1101,6 @@ body {
 .contact-background {
   background-color: #f5f5f5;
   background-image: url("data:image/svg+xml,%3Csvg width='1800' height='1800' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%2356e8ff' fill-opacity='0.21' fill-rule='evenodd'/%3E%3C/svg%3E");
-
-  /* margin-top: 25vh; */
   padding: 10px;
   position: relative;
 }
@@ -1111,6 +1111,7 @@ body {
   margin-bottom: 20px;
   margin-left: 30px;
   margin-right: 30px;
+  transition: 1s;
 }
 
 .contact-container {
@@ -1120,11 +1121,12 @@ body {
   align-items: center;
   margin-left: 30px;
   margin-right: 30px;
+  transition: 1s;
 }
 
 .contact-text-container {
-  margin-right: 400px;
-  margin-left: 30px;
+  width: 500px;
+  transition: 1s;
 }
 
 .contact-me {
@@ -1132,15 +1134,17 @@ body {
   margin-right: 30px;
   margin-bottom: 20px;
   letter-spacing: 0.02rem;
+  transition: 1s;
 }
 
 .contact-profile-container {
-  /* Empty */
   position: auto;
+  transition: 1s;
 }
 
 .form-group {
   margin-bottom: 5px;
+  transition: 1s;
 }
 
 .form-control {
@@ -1151,6 +1155,7 @@ body {
   font-size: 1.2rem;
   letter-spacing: 0.02rem;
   width: 500px;
+  transition: 1s;
 }
 
 .btn-contact {
@@ -1161,11 +1166,134 @@ body {
   letter-spacing: 0.1rem;
   margin-top: 5px;
   width: 500px;
+  transition: 1s;
 }
 
 .btn-contact:hover {
   background-color: #189200;
   transition: 0.3s;
+}
+
+@media screen and (max-width: 980px) {
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    transition: 1s;
+  }
+
+  .contact-text-container {
+    width: 440px;
+    transition: 1s;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .contact-text-container {
+    width: 340px;
+    transition: 1s;
+  }
+
+  .contact-me {
+    font-size: 1.5rem;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    letter-spacing: 0.02rem;
+    transition: 1s;
+  }
+
+  .contact-profile-container {
+    position: auto;
+    transition: 1s;
+  }
+
+  .form-group {
+    margin-bottom: 5px;
+    transition: 1s;
+  }
+
+  .form-control {
+    border-radius: 7px;
+    border: 3px solid #707070;
+    background-color: #f5f5f5;
+    padding: 10px;
+    font-size: 1.2rem;
+    letter-spacing: 0.02rem;
+    width: 450px;
+    transition: 1s;
+  }
+
+  .btn-contact {
+    background-color: #707070;
+    color: #f2f2f2;
+    border: none;
+    font-size: 2rem;
+    letter-spacing: 0.1rem;
+    margin-top: 5px;
+    width: 450px;
+    transition: 1s;
+  }
+
+  .btn-contact:hover {
+    background-color: #189200;
+    transition: 0.3s;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .contact-text-container {
+    width: 330px;
+    transition: 1s;
+  }
+
+  .contact-me {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    letter-spacing: 0.02rem;
+    transition: 1s;
+    word-wrap: break-word;
+  }
+
+  .contact-profile-container {
+    position: auto;
+    transition: 1s;
+  }
+
+  .form-group {
+    margin-bottom: 5px;
+    transition: 1s;
+  }
+
+  .form-control {
+    border-radius: 7px;
+    border: 3px solid #707070;
+    background-color: #f5f5f5;
+    padding: 10px;
+    font-size: 1.2rem;
+    letter-spacing: 0.02rem;
+    width: 290px;
+    transition: 1s;
+  }
+
+  .btn-contact {
+    background-color: #707070;
+    color: #f2f2f2;
+    border: none;
+    font-size: 2rem;
+    letter-spacing: 0.1rem;
+    margin-top: 5px;
+    width: 290px;
+    transition: 1s;
+  }
+
+  .btn-contact:hover {
+    background-color: #189200;
+    transition: 0.3s;
+  }
 }
 
 /* End Contact */
